0.10.1/_sources/gettingstarted/examples/gallery/auto_examples_processing/filtering/index.rst


.. _sphx_glr_gettingstarted_examples_gallery_auto_examples_processing_filtering:

.. _examples-processing-filtering-index:

Filtering
---------

This section contains examples of how to filter NDDatasets.



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Savitky-Golay and Whittaker-Eilers smoothing of a Raman spectrum">

.. only:: html

  .. image:: /gettingstarted/examples/gallery/auto_examples_processing/filtering/images/thumb/sphx_glr_plot_filter_thumb.png
    :alt:

  :ref:`sphx_glr_gettingstarted_examples_gallery_auto_examples_processing_filtering_plot_filter.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Savitky-Golay and Whittaker-Eilers smoothing of a Raman spectrum</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how the smoothing window size changes the balance between noise reduction an...">

.. only:: html

  .. image:: /gettingstarted/examples/gallery/auto_examples_processing/filtering/images/thumb/sphx_glr_plot_smoothing_window_size_thumb.png
    :alt:

  :ref:`sphx_glr_gettingstarted_examples_gallery_auto_examples_processing_filtering_plot_smoothing_window_size.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Compare smoothing window sizes on a Raman spectrum</div>
    </div>


.. raw:: html

    </div>


.. toctree::
   :hidden:

   /gettingstarted/examples/gallery/auto_examples_processing/filtering/plot_filter
   /gettingstarted/examples/gallery/auto_examples_processing/filtering/plot_smoothing_window_size

